# Multithread

./: .gitignore  CMakeLists.txt  Master.cc  Master.h  Slave.cc  Slave.h  TaskQueue.h  main.cc  main.cpp  master.cc  master.h  slave.cc  slave.h  task_queue.cc
code/: BUILD  Master.cc  Master.h  Slave.cc  Slave.h  TaskQueue.cc  TaskQueue.h  main.cc  master.cc  master.h  slave.cc  slave.h  task_queue.cc  task_queue.h
